src/objects/CXE_Breadcrumb__mdt.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UI_Label__c</fullName>
        <label>UI Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Breadcrumb</label>
    <pluralLabel>Breadcrumbs</pluralLabel>
</CustomObject>